--- a/seantis/dir/events/css/directory.css
+++ b/seantis/dir/events/css/directory.css
@@ -4,3 +4,38 @@
      right: 5px;   
 }
 
+#landingPageIntro {
+    margin: 15px 0 30px 0;
+}
+
+#directoryResultList {
+    width: 40%;
+    float: left;
+    min-width: 300px;
+    margin-right: 3%;
+}
+
+#directoryResultList div:first-child {
+    border-top: none;   
+}
+
+#directoryResultMap {
+    width: 42%;
+    float: left;
+    min-width: 300px;
+}
+
+.directoryCategories {
+    width: 15%;
+    float: left;
+    min-width: 100px;
+    margin: 15px 0;
+}
+
+#content .directoryCategories ul {
+    list-style-type: none;
+}
+
+#content .directoryCategories ul li {
+    margin-left: -25px;
+}
