--- a/seantis/dir/events/css/directory.css
+++ b/seantis/dir/events/css/directory.css
@@ -36,6 +36,7 @@
    background-color: #efefef;
    margin: -15px 5px 0 -10px;
    padding-left: 10px;
+   border-radius: 2px;
 }
 
 .directoryDates a {
@@ -50,6 +51,10 @@
     background-color: #feff9a;
     color: black !important;
     border-radius: 2px;
+}
+
+.directoryDates a.selected {
+    font-weight: bold;
 }
 
 #content .directoryDates ul {
