Gives anonymous users the ability to submit events through the dedicated form and colors events by state for now

--- a/seantis/dir/events/css/directory.css
+++ b/seantis/dir/events/css/directory.css
@@ -279,3 +279,15 @@
     font-weight: normal;
     color: #777;
 }
+
+.event-state-preview {
+    background-color: lightblue;
+}
+
+.event-state-submitted {
+    background-color: orange;
+}
+
+.event-state-archived {
+    background-color: grey;
+}
