--- a/seantis/dir/events/css/directory.css
+++ b/seantis/dir/events/css/directory.css
@@ -280,16 +280,19 @@
     color: #777;
 }
 
-.event-state-submitted {
-    background-color: #eee;
-}
-
-.event-state-archived {
-    background-color: grey;
-}
-
 form.change-event {
     margin-bottom: 20px;   
+}
+
+/* event states */
+
+.event-state-submitted {
+   background-color: #ddd
+}
+
+.event-state-submitted h3 a,
+.event-state-submitted div {
+    color: #777 !important;
 }
 
 /* on the event preview form the submitter group is always shown at the bottom */
@@ -302,4 +305,35 @@ form.change-event {
 
 .event-preview-form .lastFormTab {
     display: none !important;   
+}
+
+/* event-actions */
+
+.event-workflow {
+    clear:both;
+    text-align: right;
+    position: relative;
+    top: 5px;
+}
+
+.event-workflow .event-actions {
+    width: 50%;
+    float: right;
+}
+
+.event-workflow .event-state {
+    float: left;   
+    text-align: left;
+    background-color: white;
+    border: 1px solid #bbb;
+    padding: 0 4px;
+    border-radius: 2px;
+    color: #666;
+}
+
+.event-actions a {
+    background-color: #fffb97;
+    padding: 1px 5px;
+    border: none !important;
+    border-radius: 2px;
 }
