--- a/seantis/dir/events/css/directory.css
+++ b/seantis/dir/events/css/directory.css
@@ -1,7 +1,7 @@
 /* seantis.dir.events */
 
 /* hide the coordinates field on the event submission form */
-#form-widgets-coordinates {
+#form-widgets-coordinates, #form-widgets-wkt {
     display: none;
 }
 
