--- a/seantis/dir/events/css/directory.css
+++ b/seantis/dir/events/css/directory.css
@@ -5,6 +5,10 @@
     display: none;
 }
 
+.no-results {
+    text-align: center;
+}
+
 /* right align the directory marker */
 .directoryMarker {
     right: 0;
