--- a/seantis/dir/events/css/sunburst/directory.css
+++ b/seantis/dir/events/css/sunburst/directory.css
@@ -24,7 +24,7 @@
 }
 
 /* event directory columns */
-.event-navigation, #directoryResultList, .event-sidebar {
+.event-navigation, #directoryResultList, .event-sidebar, .event-view {
     float: left;
     box-sizing: border-box;
 }
@@ -45,8 +45,12 @@
     width: 35%;   
 }
 
+.event-view {
+    width: 65%;   
+}
+
 @media (max-width: 900px) {
-    .event-navigation, #directoryResultList, .event-sidebar {
+    .event-navigation, #directoryResultList, .event-sidebar, .event-view {
          float: none;
          width: 100%;
          padding: 0;  
@@ -151,7 +155,7 @@
 }
 
 /* event time */
-.timerange {
+.timerange, .event-date {
     background-color: #c9f685;
     padding: 2px 4px;
     border-radius: 3px;
@@ -178,4 +182,62 @@
     color: white;
     border-color: white;
     border-width: 0 0 4px 0;
+}
+
+/* event detail head */
+.event-date {
+    font-size: 1.2em;
+    font-weight: bold;
+    float: none;
+    margin-top: 5px;
+    margin-bottom: 5px;
+}
+
+.descriptions {
+    max-width: 700px;
+    margin-right: 50px;
+}
+
+.descriptions .short {
+    font-weight: bold;
+    margin: 5px 0 10px 0;   
+}
+
+.descriptions .long {
+    color: #333;
+    margin: 0 0 25px 0;   
+}
+
+/* adjust map on event item view */
+#directoryDetails .event-sidebar {
+    margin-top: 14px;   
+}
+
+/* same with tags */
+#directoryDetails .eventtags {
+    margin-bottom: 25px;    
+}
+
+/* event detail blocks */
+.event-details > div {
+    margin-bottom: 25px;
+    margin-right: 50px;      
+}
+
+.event-details h3 {
+    font-weight: normal;
+    font-size: 1.1em;
+    border-bottom: 1px solid #ccc;
+    margin-bottom: 10px;
+}
+
+.event-details ul {
+    margin-left: 0 !important;
+    list-style: none !important;
+}
+
+@media (max-width: 900px) {
+    .event-details > div, .descriptions {
+        margin-right: 0 !important;
+    }
 }
