--- a/seantis/dir/events/css/sunburst/directory.css
+++ b/seantis/dir/events/css/sunburst/directory.css
@@ -241,9 +241,10 @@
 
 .event-details h3 {
     font-weight: normal;
-    font-size: 1.1em;
-    border-bottom: 1px solid #ccc;
+    font-size: 1.2em;
+    border-bottom: 1px solid #eee;
     margin-bottom: 10px;
+    color: black;
 }
 
 .event-details ul {
