Adds single day / multi day switch

--- a/seantis/dir/events/css/izug/directory.css
+++ b/seantis/dir/events/css/izug/directory.css
@@ -1119,6 +1119,31 @@ form span.required:before {
     display: none;   
 }
 
+/* date / time part on submit form */
+.event-submit-form #formfield-form-widgets-date {
+    float: left;
+    clear: left;
+}
+.event-submit-form #formfield-form-widgets-start_time {
+    float: left;
+    clear: none;
+}
+.event-submit-form #formfield-form-widgets-end_time {
+    float: left;
+    clear: right;   
+}
+
+.event-submit-form #formfield-form-widgets-start_time input,
+.event-submit-form #formfield-form-widgets-end_time input,
+.event-submit-form #formfield-form-widgets-range_start_time input,
+.event-submit-form #formfield-form-widgets-range_end_time input,
+div.time-picker {
+    width: 70px !important;
+}
+
+#formfield-form-widgets-recurrence > label {
+    display: none;
+}
 /* the recurrence widget is scrambled egg on izug.basetheme */
 .rioccurrences .occurrence .action {
     position: absolute;
