--- a/seantis/dir/events/css/teamraum/directory.css
+++ b/seantis/dir/events/css/teamraum/directory.css
@@ -303,6 +303,10 @@ input.required[type="radio"]:after {
 #formfield-form-widgets-submission_range_end_time input {
     width: 200px;   
 }
+
+#formfield-form-widgets-submission_days .option {
+    float: left;
+    margin-right: 1.5em;
 }
 
 /* 
