--- a/seantis/dir/events/css/teamraum/directory.css
+++ b/seantis/dir/events/css/teamraum/directory.css
@@ -15,7 +15,10 @@
 /* event directory columns */
 .event-navigation, #directoryResultList, .event-sidebar, .event-view {
     float: left;
-    box-sizing: border-box;
+    -webkit-box-sizing: border-box;
+       -moz-box-sizing: border-box;
+         -o-box-sizing: border-box;
+            box-sizing: border-box;
 }
 
 .event-navigation, #directoryResultList {
